# telescope-safety

./: Navod.md  README.md
docs/: Návrh.md
docs/Navrh/: navrh.h
src/control_unit/control_unit/: allINeedForControlUnit.cpp  allINeedForControlUnit.h  control_unit.ino  httpHandlers.cpp  httpHandlers.h  servers.cpp  servers.h  time.h
src/control_unit/control_unit_A/: allINeedForControlUnit.cpp  allINeedForControlUnit.h  buttons.cpp  buttons.h  common_structs.h  config_parse.cpp  config_parse.h  control_unit_A.ino  danger_evaluation.cpp  danger_evaluation.h  forbidden_zones_config_parse.cpp  forbidden_zones_config_parse.h  httpHandlers.cpp  httpHandlers.h  logs.cpp  logs.h  lora_communication.cpp  lora_communication.h  servers.cpp  servers.h  time.cpp  time.h
src/control_unit/display/: display.cpp  display.h  display.ino
src/control_unit/libraries/: readme.md
src/control_unit/libraries/MCUFRIEND_kbv/: FreeDefaultFonts.h
src/control_unit/libraries/UTFT/examples/Arduino (AVR)/UTFT_Demo_480x320/: UTFT_Demo_480x320.ino
src/inercial_unit/inercial_unit_A/: gain_roll_pitch_yaw.cpp  gain_roll_pitch_yaw.h  inercial_unit_A.ino  lora_communication.cpp  lora_communication.h  reset_sensor.cpp  reset_sensor.h  transform_to_azimuth_elevation.cpp  transform_to_azimuth_elevation.h
src/inercial_unit/libraries/: readme.md
src/inercial_unit/libraries/SparkFun_6DoF_ISM330DHCX_Arduino_Library-main/: README.md  keywords.txt  library.properties
src/inercial_unit/libraries/SparkFun_6DoF_ISM330DHCX_Arduino_Library-main/.github/workflows/: compile-sketch.yml
src/inercial_unit/libraries/SparkFun_6DoF_ISM330DHCX_Arduino_Library-main/examples/example1_basic/: example1_basic.ino
src/inercial_unit/libraries/SparkFun_6DoF_ISM330DHCX_Arduino_Library-main/examples/example2_interrupt/: example2_interrupt.ino
src/inercial_unit/libraries/SparkFun_6DoF_ISM330DHCX_Arduino_Library-main/examples/example3_sensor_hub/: example3_sensor_hub.ino
src/inercial_unit/libraries/SparkFun_6DoF_ISM330DHCX_Arduino_Library-main/examples/example4_spi/: example4_spi.ino
src/inercial_unit/libraries/SparkFun_6DoF_ISM330DHCX_Arduino_Library-main/examples/example5_faster_I2C/: example5_faster_I2C.ino
src/inercial_unit/libraries/SparkFun_6DoF_ISM330DHCX_Arduino_Library-main/src/: SparkFun_ISM330DHCX.h  sfe_bus.cpp  sfe_bus.h  sfe_ism330dhcx.cpp  sfe_ism330dhcx.h  sfe_ism330dhcx_defs.h  sfe_ism_shim.cpp  sfe_ism_shim.h
src/inercial_unit/libraries/SparkFun_6DoF_ISM330DHCX_Arduino_Library-main/src/st_src/: ism330dhcx_reg.c  ism330dhcx_reg.h
src/inercial_unit/libraries/SparkFun_ICM-20948_ArduinoLibrary-main/examples/Arduino/Example4_WakeOnMotion/: Example4_WakeOnMotion.ino
src/inercial_unit/libraries/arduino-LoRa-master/: README.md
src/ui/: config.html  config.js  form.js  index.html  login.html  main.js  scripts.js  styles.css
testovanie/Ethernet/: .gitignore  CMakeLists.txt  Ethernet.c
testovanie/Ethernet/libraries/ioLibrary_Driver-master/Internet/DHCP/: dhcp.h
testovanie/Ethernet/libraries/ioLibrary_Driver-master/Internet/httpServer/: httpServer.h
testovanie/Ethernet/www/: styles.css  websites.h
testovanie/testRaspberry blink/ziarovka/blink_simple/: CMakeLists.txt
testovanie/testRele/: .gitignore  CMakeLists.txt  testRele.cpp
testovanie/webserver/: .gitignore  dataGenerationCSimulation.py  go.mod  server.go
testovanie/webserver/www/: data.js  index.html  style.css
